@@ -28,11 +28,12 @@ fi
 SPEC="modules/openapi-generator/src/test/resources/3_0/petstore-with-fake-endpoints-models-for-testing.yaml"
 GENERATOR="go"
 STUB_DIR="samples/openapi3/client/petstore/go/go-petstore"
+
 echo "Removing files and folders under $STUB_DIR"
 rm -rf $STUB_DIR
 
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
 ags="generate -t modules/openapi-generator/src/main/resources/go -i $SPEC -g $GENERATOR -o $STUB_DIR -DpackageName=petstore $@"
 
 java $JAVA_OPTS -jar $executable $ags
